[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameDVDCardtridge/ParlorClassic/InitScronch.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 1036.57, 613.234 )

[node name="InitScronch" type="Area2D"]
position = Vector2( 960, 540 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ScronchTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_InitScronch_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_InitScronch_body_shape_entered"]
[connection signal="timeout" from="ScronchTimer" to="." method="_on_ScronchTimer_timeout"]
